# django-grep

./: .gitignore  README.md  pyproject.toml
docs/: components.md  index.md  routes.md  usage.md  utils.md
docs/components/: features.md  index.md
docs/pipelines/: backends.md  filters.md  forms.md  managers.md  models.md  pipelines.md  services.md
src/django_grep/: __about__.py  __init__.py  conf_utils.py
src/django_grep/components/: __init__.py  _init.py  apps.py  conf.py  manifest.py  models.py  options.py  params.py  staticfiles.py  templates.py  up.py
src/django_grep/components/adapters/: __init__.py  base.py  main.py  test.py
src/django_grep/components/blocks/: __init__.py  base.py  mixins.py  streamBlocks.py
src/django_grep/components/plugins/: hookspecs.py  manager.py
src/django_grep/components/site/: __init__.py  context.py  notifications.py  pageHandler.py  paginators.py  plugins.py  response.py
src/django_grep/components/templatetags/: apps.py  components.py  contentType.py  embedBlocks.py  userRole.py
src/django_grep/contrib/: __init__.py  admin_site.py  cache.py  utils.py
src/django_grep/contrib/choices/: __init__.py  cart.py  contact.py  message.py  module.py  styles.py  token.py
src/django_grep/contrib/context/: __init__.py  auth.py  cookies.py  htmx.py  languages.py  settings.py
src/django_grep/contrib/debug_tools/: base.py  (+12 more)
src/django_grep/pipelines/: apps.py  conf.py  urls.py  usage.md  wagtail_hooks.py
src/django_grep/routes/: __init__.py  base.py  model.py  other.py  sites.py  usage.md
src/django_grep/scripts/: superuser.py
(+195 files in other folders)
