[project]
name = "django-grep"
version = "1.0.3"
description = "Generic Reusable Enhanced Pipelines for Django and Wagtail"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Mahmoud Ezzat", email = "your.email@example.com"}
]
dependencies = [
    "django",
    "wagtail",
]

[tool.bumpver]
current_version = "1.0.3"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"src/django_grep/__about__.py" = [
    '^__version__ = "{version}"$',
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
